@@ -312,3 +312,39 @@ int NoDivTriTriIsect(float V0[3],float V1[3],float V2[3],
   return 1;
 }
 
+
+int intersect_triangle(float orig[3], float dir[3], 
+                       float vert0 [3], float vert1 [3], float vert2 [3],
+                       float* t, float* u, float* v)
+{
+   float edge1[3], edge2[3];
+   float tvec[3], pvec[3], qvec[3];
+   float det, inv_det;
+
+   /* find vectors for two edges sharing vert0 */
+   SUB(edge1, vert1, vert0);
+   SUB(edge2, vert2, vert0);
+   /* begin calculating determinant - also used to calculate U parameter */
+   CROSS(pvec, dir, edge2);
+   /* if determinant is near zero, ray lies in plane of triangle */
+   det = DOT(edge1, pvec);
+   if (det > -EPSILON && det < EPSILON)
+      return 0;
+   inv_det = 1.0 / det;
+   /* calculate distance from vert0 to ray origin */
+   SUB(tvec, orig, vert0);
+   /* calculate U parameter and test bounds */
+   *u = DOT(tvec, pvec) * inv_det;
+   if (*u < 0.0 || *u > 1.0)
+      return 0;
+   /* prepare to test V parameter */
+   CROSS(qvec, tvec, edge1);
+   /* calculate V parameter and test bounds */
+   *v = DOT(dir, qvec) * inv_det;
+   if (*v < 0.0 || *u + *v > 1.0)
+      return 0;
+   /* calculate t, ray intersects triangle */
+   *t = DOT(edge2, qvec) * inv_det;
+   return 1;
+}
+
