@@ -12,7 +12,8 @@
  - Added support to md5 models and animations;
  - 3D messages could be static on Y axis;
  - Lots of adjusts and fixes to the A* implementation;
- - Disabling vsync via OpenGL for better perfomance in OSX; 
+ - Disabling vsync via OpenGL for better perfomance in OSX;
+ - Verifying sight when NPC selecting target enemy;
 
  - Simplified number of skills to 12;
  - Removed the class Administration Student;
